# logging-tools

./: .gitignore  CMakeLists.txt  README.md
include/: LogBase.hpp  LogConsole.hpp  LogException.hpp
test/: CMakeLists.txt  test_logging_tools.cpp
